--- a/WebContent/html/compte_authentification(2).html
+++ b/WebContent/html/compte_authentification(2).html
@@ -51,13 +51,13 @@
             <div class="form-group row">
               <label class="col-sm-2 col-form-label">Identifiant : </label>
               <div class="col-sm-9">
-                <input type="text" class="form-control" placeholder="Identifiant">
+                <input id="login" type="text" class="form-control" placeholder="Identifiant">
               </div>
             </div>
             <div class="form-group row">
               <label class="col-sm-2 col-form-label">Password : </label>
               <div class="col-sm-9">
-                <input type="password" class="form-control" placeholder="Password">
+                <input id="password" type="password" class="form-control" placeholder="Password">
               </div>
             </div>
           </form>
@@ -70,7 +70,7 @@
         <div class="col col-lg-8">
           <div class="row">
             <div class="col-6">
-              <a href="./acceuil(4-5).html" class="btn btn-outline-success my-2 my-sm-0" role="button">Connexion</a>
+              <a onclick="tryToAuth();" class="btn btn-outline-success my-2 my-sm-0" role="button">Connexion</a> <!-- href="./acceuil(4-5).html"  -->
             </div>
             <div class="col-6">
               <div class="row">
@@ -97,8 +97,9 @@
     </div>
 
     <!-- export -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  	<script src="../js/compte_authentification.js"></script>
   </body>
 </html>
