--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
     <title>Index</title>
-    <link rel="stylesheet" href="../css/style.css">
+	 <link rel="stylesheet" href="public/css/style.css">
+	 <link rel="stylesheet" href="public/css/bootstrap.min.css">
   </head>
   <body>
 
@@ -20,7 +19,7 @@
 
     <!-- top bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="./index.html">ENI_encheres</a>
+      <a class="navbar-brand" href="index.html">ENI_encheres</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -28,7 +27,7 @@
       <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/ENI_encheres/public/html/compte_authentification.html">S'inscrire - se connecter</a>
+            <a class="nav-link" href="public/html/compte_authentification.html">S'inscrire - se connecter</a>
           </li>
         </ul>
       </div>
@@ -59,13 +58,6 @@
                 </div>
                 <div class="col-8">
                   <div id="selectCategories"></div>
-                  <!-- <select class="form-control" id="exampleFormControlSelect1">
-                    <option>toutes</option>
-                    <option>cat 2</option>
-                    <option>cat 3</option>
-                    <option>cat 4</option>
-                    <option>cat 5</option>
-                  </select> -->
                 </div>
               </div>
             </div>
@@ -85,9 +77,9 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
-    <script src="/ENI_encheres/public/js/tools/logger.js" type"text/javascript"></script>
-    <script src="/ENI_encheres/public/js/tools/htmlBuilder.js" type"text/javascript"></script>
-    <script src="/ENI_encheres/public/js/tools/cookies.js"></script>
-    <script src="/ENI_encheres/public/js/index.js" type"text/javascript"></script>
+    <script src="public/js/tools/logger.js" type"text/javascript"></script>
+    <script src="public/js/tools/htmlBuilder.js" type"text/javascript"></script>
+    <script src="public/js/tools/cookies.js"></script>
+    <script src="public/js/index.js" type"text/javascript"></script>
   </body>
 </html>
